tests/baselines/reference/memberOverride.errors.txt
tests/cases/compiler/memberOverride.ts(4,5): error TS2300: Duplicate identifier 'a'.
tests/cases/compiler/memberOverride.ts(5,5): error TS2300: Duplicate identifier 'a'.
tests/cases/compiler/memberOverride.ts(5,5): error TS2687: Cannot change type of property 'a' from 'string' to 'number'.


==== tests/cases/compiler/memberOverride.ts (3 errors) ====
    // An object initialiser accepts the first definition for the same property with a different type signature
    // Should compile, since the second declaration of a overrides the first
    var x = {
        a: "", 
        ~
!!! error TS2300: Duplicate identifier 'a'.
        a: 5
        ~
!!! error TS2300: Duplicate identifier 'a'.
        ~
!!! error TS2687: Cannot change type of property 'a' from 'string' to 'number'.
    }
    
    var n: number = x.a;